--- a/noscript-modal.css
+++ b/noscript-modal.css
@@ -1,60 +1,77 @@
 .ns-modal {
-  position: relative;
-  z-index: 10000;
-}
-.ns-modal:target {
-  z-index: 10010;
-}
-.ns-modal-overlay,
-.ns-modal-box {
-  opacity: 0;
-  height: 0;
-  overflow: hidden;
-  -webkit-transition: opacity .2s linear 0s, height 0s linear .2s;
-     -moz-transition: opacity .2s linear 0s, height 0s linear .2s;
-       -o-transition: opacity .2s linear 0s, height 0s linear .2s;
-          transition: opacity .2s linear 0s, height 0s linear .2s;
-}
-.ns-modal-overlay {
-  display: block;
   position: fixed;
   top: 0;
   left: 0;
+  width: 0;
+  height: 0;
+  z-index: 10000;
+  overflow: hidden;
+  -webkit-transition: width 0s linear .2s, height 0s linear .2s;
+     -moz-transition: width 0s linear .2s, height 0s linear .2s;
+       -o-transition: width 0s linear .2s, height 0s linear .2s;
+          transition: width 0s linear .2s, height 0s linear .2s;
+}
+.ns-modal:target {
   width: 100%;
+  height: 100%;
+  z-index: 10010;
+  -webkit-transition-delay: 0s;
+     -moz-transition-delay: 0s;
+       -o-transition-delay: 0s;
+          transition-delay: 0s;
+}
+.ns-modal-overlay {
+  opacity: 0;
+  -webkit-transition: opacity .2s;
+     -moz-transition: opacity .2s;
+       -o-transition: opacity .2s;
+          transition: opacity .2s;
+}
+.ns-modal:target > .ns-modal-overlay {
+  opacity: 1;
+}
+.ns-modal-box {
+  opacity: 0;
+  -webkit-transform: scale(.8,.8);
+     -moz-transform: scale(.8,.8);
+       -o-transform: scale(.8,.8);
+          transform: scale(.8,.8);
+  -webkit-transition: opacity .2s, -webkit-transform .2s;
+     -moz-transition: opacity .2s,    -moz-transform .2s;
+       -o-transition: opacity .2s,      -o-transform .2s;
+          transition: opacity .2s,         transform .2s;
+}
+.ns-modal:target > .ns-modal-box {
+  opacity: 1;
+  -webkit-transform: scale(1,1);
+     -moz-transform: scale(1,1);
+       -o-transform: scale(1,1);
+          transform: scale(1,1);
+}
+.ns-modal-overlay {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   cursor: default;
   outline: none;
   background-color: rgba(0,0,0,.5);
 }
 .ns-modal-box {
   display: block;
-  position: fixed;
-  top: 150px;
-  left: 50%;
+  position: relative;
   width: 500px;
-  margin-left: -250px;
+  margin: 150px auto 0;
   border-radius: 4px;
   background-color: #fff;
   box-shadow: 0 0 10px 0 rgba(0,0,0,.4);
 }
-.ns-modal:target > .ns-modal-overlay,
-.ns-modal:target > .ns-modal-box {
-  opacity: 1;
-  -webkit-transition: opacity .2s linear 0s, height 0s linear 0s;
-     -moz-transition: opacity .2s linear 0s, height 0s linear 0s;
-       -o-transition: opacity .2s linear 0s, height 0s linear 0s;
-          transition: opacity .2s linear 0s, height 0s linear 0s;
-}
-.ns-modal:target > .ns-modal-overlay {
-  height: 100%;
-}
-.ns-modal:target > .ns-modal-box {
-  height: auto;
-}
-
 .ns-modal-close {
   display: block;
   position: absolute;
-  top: 8px;
+  top: 7px;
   right: 10px;
   width: 16px;
   height: 16px;
