Make page styles external.

--- a/noscript-modal.css
+++ b/noscript-modal.css
@@ -1,3 +1,7 @@
+/*!
+ * Noscript Modal
+ * (c) 2012 Tanjo, Hiroyuki | Available under the MIT license.
+ */
 .ns-modal {
   position: fixed;
   top: 0;
