--- a/demo/main.css
+++ b/demo/main.css
@@ -6,6 +6,7 @@ body {
   line-height: 1.5;
   color: #333;
   background-color: #fff;
+  -webkit-text-size-adjust: none;
 }
 a {
   text-decoration: none;
@@ -99,4 +100,15 @@ p {
 /* Modals */
 #modal02 > .ns-modal-box {
   max-width: 340px;
+}
+
+/* Media query */
+@media screen and (max-width: 760px) {
+  #container {
+    width: auto;
+    padding: 10px;
+  }
+  .ns-modal-box {
+    top: 15px;
+  }
 }
