--- a/noscript-modal.css
+++ b/noscript-modal.css
@@ -59,14 +59,15 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0,0,0,.5);
   cursor: default;
   outline: none;
-  background-color: rgba(0,0,0,.5);
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .ns-modal-box {
   display: block;
   position: absolute;
-  top: 120px;
+  top: 150px;
   left: 15px;
   right: 15px;
   overflow: auto;
