--- a/noscript-modal.css
+++ b/noscript-modal.css
@@ -47,10 +47,10 @@
 }
 .ns-modal:target > .ns-modal-box {
   opacity: 1;
-  -webkit-transform: scale(1,1);
-     -moz-transform: scale(1,1);
-       -o-transform: scale(1,1);
-          transform: scale(1,1);
+  -webkit-transform: none;
+     -moz-transform: none;
+       -o-transform: none;
+          transform: none;
 }
 .ns-modal-overlay {
   display: block;
@@ -67,12 +67,12 @@
 .ns-modal-box {
   display: block;
   position: absolute;
-  top: 150px;
+  top: 10%;
   left: 15px;
   right: 15px;
-  overflow: auto;
-  max-width: 500px;
-  margin: auto;
+  bottom: auto;
+  max-width: 560px;
+  margin: 0 auto;
   border-radius: 4px;
   background-color: #fff;
   box-shadow: 0 0 10px 0 rgba(0,0,0,.4);
@@ -80,18 +80,18 @@
 .ns-modal-box.full {
   top: 15px;
   bottom: 15px;
-  width: auto;
-  height: auto;
   max-width: none;
   margin: 0;
 }
 .ns-modal-close {
   display: block;
   position: absolute;
-  top: 7px;
-  right: 10px;
-  width: 16px;
-  height: 16px;
+  top: 10px;
+  right: 14px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  z-index: 1;
   outline: none;
   cursor: pointer;
   text-align: center;
@@ -99,7 +99,6 @@
   font-size: 20px;
   font-weight: bold;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1;
   color: #ccc;
 }
 .ns-modal-close:hover,
@@ -108,5 +107,13 @@
   text-decoration: none;
 }
 .ns-modal-box-inner {
+  max-height: 450px;
+  overflow: auto;
   padding: 15px;
+}
+.ns-modal-box.full .ns-modal-box-inner {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  max-height: none;
 }
